# RosettaKit

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.codex/skills/rosettakit-dsl/: SKILL.md
.codex/skills/rosettakit-dsl/agents/: openai.yaml
.codex/skills/rosettakit-dsl/references/: rosettakit-api.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: __init__.py  sizer_cmd_file.py  sizer_env_file.py  yosys_global_var.py
rosettakit/: __init__.py  cmdfile.py  diagnostics.py  errors.py  tcl.py
tests/: __init__.py  tclsh_utils.py  test_cmdfile_builder.py  test_examples.py  test_tcl_builder.py
