[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.0,<0.11.26" ]

[project]
name = "rosettakit"
version = "0.2.0"
description = "Typed Python builders for EDA scripts and command files"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "Emin", email = "me@emin.chat" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Emin017/RosettaKit"
Repository = "https://github.com/Emin017/RosettaKit"
Issues = "https://github.com/Emin017/RosettaKit/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.14.10",
]

[tool.uv]
build-backend.module-name = [ "rosettakit" ]
build-backend.module-root = ""

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [ "E", "F", "ANN" ]
